--- a/templates/mainpage/my_order.html
+++ b/templates/mainpage/my_order.html
@@ -20,6 +20,7 @@
                     <th class = "col-5">Name</th>
                     <th>Price(Rs.)</th>
                     <th>Quantity</th>
+                    <th> Size </th>
                     <th>Payment Method</th>
                     <th>Payment Status</th>
                     <th>Order Status Status</th>
@@ -35,6 +36,7 @@
                     <td>{{item.product.name}}</td>
                     <td>{{item.total_price}}</td>
                     <td>{{item.quantity}}</td>
+                    <td>{{item.size2}}</td>
                     <td>{{item.payment_method}}</td>
                     <td>{{item.payment_status}}</td>
                     <td>{{item.status}}</td>
